form files added

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
    
 </head>
 <body>
-    <h1>welcome</h1>
+    <!-- <h1>welcome</h1>
     <h2>KL</h2>
     <h1>Adhith</h1>
     <h2>dadad</h2>
@@ -26,7 +26,18 @@
     <ol>
         <li>dcsdsdf</li>
         <li>fsdfsdfscdcsdf</li>
-    </ol>
+    </ol> -->
+
+     <!-- form -->
+    <input type="text" placeholder="username" class="username" id="user">
+    <br>
+    <br>
+    <input type="text" placeholder="password" class="password" id="pass">
+    <br>
+    <br>
+    <button>login</button>
+
+
     <script src="script.js"></script>
 </body>
 </html>
